force-app/main/default/objects/Product_Inspection__c/Product_Inspection__c.object-meta.xml
<CustomObject>
    <label>Product Inspection</label>
    <nameField>
        <label>Product Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>