force-app/main/default/objects/Product_Inspection__c/fields/Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date__c</fullName>
    <inlineHelpText>Enter the date when the inspection was conducted.</inlineHelpText>
    <label>Inspection Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>