force-app/main/default/objects/Product_Inspection__c/fields/Inspection_ID__c.field-meta.xml
<CustomField>
    <fullName>Inspection_ID__c</fullName>
    <displayFormat>INS-{0000}</displayFormat>
    <inlineHelpText>Automatically generated unique identifier for each inspection.</inlineHelpText>
    <label>Inspection ID</label>
    <type>AutoNumber</type>
</CustomField>