force-app/main/default/objects/Product_Inspection__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user who performed the inspection.</inlineHelpText>
    <label>Inspector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>