force-app/main/default/objects/Product_Inspection__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the inventory item that is being inspected.</inlineHelpText>
    <label>Inventory Item</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Product Inspections</relationshipLabel>
    <relationshipName>Product_Inspections</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>