force-app/main/default/objects/Product_Inspection__c/fields/Non_Conformance_Report_NCR__c.field-meta.xml
<CustomField>
    <fullName>Non_Conformance_Report_NCR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if a Non-Conformance Report was generated.</inlineHelpText>
    <label>Non-Conformance Report (NCR)</label>
    <type>Checkbox</type>
</CustomField>