force-app/main/default/objects/Product_Inspection__c/fields/Related_PO__c.field-meta.xml
<CustomField>
    <fullName>Related_PO__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the purchase order that this inspection is related to.</inlineHelpText>
    <label>Related PO</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Product Inspections</relationshipLabel>
    <relationshipName>Product_Inspections</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>