force-app/main/default/objects/Product_Inspection__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <inlineHelpText>Select the result of the inspection (Pass or Fail).</inlineHelpText>
    <label>Result</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>