force-app/main/default/objects/Product_Inspection__c/validationRules/Inspection_Result_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspection_Result_Validation</fullName>
    <active>true</active>
    <description>Ensures that a result is selected before marking the inspection as complete.</description>
    <errorConditionFormula>ISBLANK(TEXT(Result__c))</errorConditionFormula>
    <errorMessage>Result must be selected before marking the inspection as complete.</errorMessage>
</ValidationRule>